src/cses/palindrome_reorder/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/palindrome_reorder/palindrome_reorder.cpp.
/Users/michael/repos/competitive-programming/src/cses/palindrome_reorder/palindrome_reorder.cpp:3:10: error: 'array' file not found [clang-diagnostic-error]
    3 | #include <array>
      |          ^~~~~~~
Found compiler error(s).
